create new backend file for updating establishment banners, add call to start page, alter establishment class to accept new banner flag property

--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -22,6 +22,7 @@
     </ul>
     <a
       [routerLink]="['/workplace', establishment.uid, 'other-services']"
+      (click)="removeAddDetailsBanner($event)"
       role="button"
       draggable="false"
       class="govuk-button govuk-!-margin-top-5"
