--- a/src/app/features/workplace/regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/features/workplace/regulated-by-cqc/regulated-by-cqc.component.html
@@ -10,9 +10,7 @@
   <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">
-          Enter the postcode or location ID
-        </h1>
+        <h1 class="govuk-fieldset__heading">Enter the postcode or location ID</h1>
       </legend>
 
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
@@ -28,9 +26,7 @@
           <div id="group-error">
             <!-- regulated postcode -->
             <div class="govuk-form-group govuk-!-margin-bottom-2">
-              <label class="govuk-label" for="regulatedPostcode">
-                Enter your postcode
-              </label>
+              <label class="govuk-label" for="regulatedPostcode"> Enter your postcode </label>
               <span
                 id="group-regulatedPostcode-error"
                 class="govuk-error-message"
@@ -55,9 +51,7 @@
 
             <!-- location Id -->
             <div class="govuk-form-group">
-              <label class="govuk-label" for="locationId">
-                Enter your location ID number
-              </label>
+              <label class="govuk-label" for="locationId"> Enter your location ID number </label>
               <span id="group-locationId-error" class="govuk-error-message" *ngIf="submitted && locationId.errors">
                 <span class="govuk-visually-hidden">Error:</span>
                 {{ getFirstErrorMessage('group.locationId') }}
@@ -76,14 +70,6 @@
         </div>
       </div>
     </fieldset>
-
-    <button class="govuk-button" type="submit">Continue</button>
-    <button
-      type="button"
-      class="govuk-button govuk-button--link govuk-util__float-right"
-      (click)="returnToWorkPlace($event)"
-    >
-      Exit
-    </button>
+    <app-workplace-continue-cancel-button (clicked)="navigateAction($event)"></app-workplace-continue-cancel-button>
   </form>
 </div>
