Add the functionality for user service progress bar

--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -8,10 +8,13 @@
 
 <form #formEl *ngIf="renderForm" (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
+    <div class="govuk-grid-column-two-thirds">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">Who are your service users?</h1>
+          <h1 class="govuk-fieldset__heading">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+            Who are your service users?
+          </h1>
         </legend>
         <p>Select all that apply.</p>
         <div class="govuk-form-group" *ngFor="let group of serviceUserGroups">
@@ -77,6 +80,15 @@
           </fieldset>
         </div>
       </fieldset>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <div class="govuk-util__float-right">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="sections"
+          [currentSection]="section"
+        ></app-progress-bar>
+      </div>
     </div>
   </div>
 
