Add test for progress bar

--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -82,7 +82,7 @@
       </fieldset>
     </div>
     <div class="govuk-grid-column-one-third">
-      <div class="govuk-util__float-right">
+      <div *ngIf="!return" class="govuk-util__float-right">
         <app-progress-bar
           data-testid="progress-bar"
           [sections]="sections"
