feat(workplaceTabTextAndColourFix) Fixed typo and changed hint text to be black

--- a/src/app/features/workplace/other-services/other-services.component.html
+++ b/src/app/features/workplace/other-services/other-services.component.html
@@ -39,7 +39,9 @@
               data-testid="checkboxes"
             >
               <div class="govuk-form-group">
-                <span id="otherJobRoles-hint" class="govuk-hint"> Select all that apply. </span>
+                <div class="govuk-!-margin-bottom-3">
+                  <p><span id="otherJobRoles-hint"> Select all that apply. </span></p>
+                </div>
                 <span
                   *ngIf="submitted && form.get('otherServices').errors"
                   id="otherServices-error"
