--- a/src/app/shared/components/total-staff/total-staff.component.html
+++ b/src/app/shared/components/total-staff/total-staff.component.html
@@ -2,10 +2,14 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('totalStaff').invalid">
       <h1 class="govuk-heading-xl">Add the total number of staff for your workplace</h1>
-      <span id="totalStaff-hint" class="govuk-hint">
-        The total needs to include all staff (care-providers and none care-providers, those on permanent or temporary
-        contracts, pool, bank and agency workers).
-      </span>
+      <div class="govuk-!-margin-bottom-3">
+        <p>
+          <span id="totalStaff-hint">
+            The total needs to include all staff (care-providers and non care-providers, those on permanent or temporary
+            contracts, pool, bank and agency workers).
+          </span>
+        </p>
+      </div>
       <span *ngIf="submitted && form.get('totalStaff').invalid" id="totalStaff-error" class="govuk-error-message">
         <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('totalStaff') }}
       </span>
