add get establishments to dashboard, and alter subscription to users in the header component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -34,7 +34,7 @@
               >{{ fullname }}</a
             >
           </li>
-          <li *ngIf="workplaceId" class="govuk-header__navigation-item" routerLinkActive="active">
+          <li *ngIf="workplaceId && !isOnAdminScreen" class="govuk-header__navigation-item" routerLinkActive="active">
             <a
               [routerLink]="['/workplace', workplaceId, 'users']"
               class="govuk-header__link"
