pass worker count to new summary component from workplace tab, remove throwing an error if no returnTo value in local storage

--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -38,11 +38,6 @@
       Start to add more details about your workplace
     </a>
   </app-inset-text>
-  <app-new-workplace-summary [workplace]="workplace" [return]="summaryReturnUrl"> </app-new-workplace-summary>
-  <!-- <app-workplace-summary
-    *ngIf="workplace"
-    [workplace]="workplace"
-    [workerCount]="workerCount"
-    [return]="summaryReturnUrl"
-  ></app-workplace-summary> -->
+  <app-new-workplace-summary [workplace]="workplace" [workerCount]="workerCount" [return]="summaryReturnUrl">
+  </app-new-workplace-summary>
 </ng-container>
