--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -19,9 +19,8 @@
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading govuk__nowrap">
                   <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-                  Add your new starters from the
+                  Add your new starters from the <br />last 12 months
                 </h1>
-                <h1 class="govuk-fieldset__heading">last 12 months</h1>
               </legend>
               <p class="govuk__nowrap">These should only be new starters who are permanent or temporary staff.</p>
             </div>
