Amend the text for repeat trainig and fixed the test

--- a/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
+++ b/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
@@ -5,11 +5,11 @@
         <div class="govuk-form-group govuk-!-margin-bottom-0">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Do new starters have to repeat training they've done with previous employers?
+              Do new care workers have to repeat training they've done with previous employers?
             </h1>
           </legend>
           <div class="govuk-!-margin-bottom-6">
-            <p>Training could be things like first aid or fire safety training.</p>
+            <p>Training could be things like 'moving and handling' and 'dementia care'.</p>
           </div>
           <div class="gouvk-grid-row govuk-!-margin-bottom-3">
             <div class="govuk-radios">
