feat(implementProgressBarStaffRecruitmentCareCertificate): Implemented progress bar, navigation refactor and added tests

--- a/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
+++ b/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
@@ -1,34 +1,44 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
-  <fieldset class="govuk-fieldset">
-    <div class="govuk-form-group govuk-!-margin-bottom-0">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <fieldset class="govuk-fieldset">
+        <div class="govuk-form-group govuk-!-margin-bottom-0">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
+              <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
               Would you accept a Care Certificate from a worker's previous employer?
             </h1>
           </legend>
         </div>
-      </div>
-      <div class="gouvk-grid-row govuk-!-margin-bottom-3">
-        <div class="govuk-radios">
-          <div class="govuk-radios__item" *ngFor="let option of previousCareCertificateOptions; let i = index">
-            <input
-              class="govuk-radios__input"
-              id="acceptCareCertificatesFromPreviousEmployment-{{ i }}"
-              name="acceptCareCertificatesFromPreviousEmployment"
-              [formControlName]="'acceptCareCertificatesFromPreviousEmployment'"
-              type="radio"
-              [value]="option.value"
-            />
-            <label class="govuk-label govuk-radios__label" for="acceptCareCertificatesFromPreviousEmployment-{{ i }}">
-              {{ option.label }}
-            </label>
+        <div class="gouvk-grid-row govuk-!-margin-bottom-3">
+          <div class="govuk-radios">
+            <div class="govuk-radios__item" *ngFor="let option of previousCareCertificateOptions; let i = index">
+              <input
+                class="govuk-radios__input"
+                id="acceptCareCertificatesFromPreviousEmployment-{{ i }}"
+                name="acceptCareCertificatesFromPreviousEmployment"
+                [formControlName]="'acceptCareCertificatesFromPreviousEmployment'"
+                type="radio"
+                [value]="option.value"
+              />
+              <label class="govuk-label govuk-radios__label" for="acceptCareCertificatesFromPreviousEmployment-{{ i }}">
+                {{ option.label }}
+              </label>
+            </div>
           </div>
         </div>
+      </fieldset>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <div *ngIf="!return" class="govuk-util__float-right">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="sections"
+          [currentSection]="section"
+        ></app-progress-bar>
       </div>
     </div>
-  </fieldset>
+  </div>
   <app-workplace-submit-button
     [return]="!!return"
     [recordSummary]="!this.inStaffRecruitmentFlow"
