--- a/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
+++ b/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
@@ -6,73 +6,83 @@
 ></app-error-summary>
 
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
-  <fieldset class="govuk-fieldset">
-    <div class="govuk-form-group govuk-!-margin-bottom-0" [class.govuk-form-group--error]="">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <fieldset class="govuk-fieldset">
+        <div class="govuk-form-group govuk-!-margin-bottom-0" [class.govuk-form-group--error]="">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
             <h1 class="govuk-fieldset__heading">
               How much money have you spent on advertising for staff in the last 4 weeks?
             </h1>
           </legend>
         </div>
-      </div>
-      <div class="govuk-grid-row govuk-!-margin-bottom-6">
-        <div class="govuk-grid-column-two-thirds">
-          <div class="govuk-form-group" [class.govuk-form-group--error]="this.submitted && this.form.invalid">
-            <label class="govuk-label" for="amountSpent">Amount spent</label>
-            <span id="amountSpent-hint" class="govuk-hint">For example, 150.40</span>
-            <span
-              *ngIf="submitted && this.form.get('amountSpent').invalid"
-              id="amountSpent-error"
-              class="govuk-error-message"
-            >
-              <span class="govuk-visually-hidden">Error:</span>
-              <span *ngIf="this.form.get('amountSpent').errors.pattern">
-                {{ getFormErrorMessage('amountSpent', 'pattern') }}
-              </span>
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-form-group" [class.govuk-form-group--error]="this.submitted && this.form.invalid">
+              <label class="govuk-label" for="amountSpent">Amount spent</label>
+              <span id="amountSpent-hint" class="govuk-hint">For example, 150.40</span>
               <span
-                *ngIf="
-                  this.form.get('amountSpent').errors.greaterThanTwoDecimalPlaces &&
-                  !this.form.get('amountSpent').errors.pattern
-                "
+                *ngIf="submitted && this.form.get('amountSpent').invalid"
+                id="amountSpent-error"
+                class="govuk-error-message"
               >
-                {{ getFormErrorMessage('amountSpent', 'greaterThanTwoDecimalPlaces') }}
+                <span class="govuk-visually-hidden">Error:</span>
+                <span *ngIf="this.form.get('amountSpent').errors.pattern">
+                  {{ getFormErrorMessage('amountSpent', 'pattern') }}
+                </span>
+                <span
+                  *ngIf="
+                    this.form.get('amountSpent').errors.greaterThanTwoDecimalPlaces &&
+                    !this.form.get('amountSpent').errors.pattern
+                  "
+                >
+                  {{ getFormErrorMessage('amountSpent', 'greaterThanTwoDecimalPlaces') }}
+                </span>
               </span>
-            </span>
-            <div class="govuk-input__wrapper">
-              <div class="govuk-input__prefix">£</div>
-              <input
-                class="govuk-input govuk-input--width-5"
-                [formControlName]="'amountSpent'"
-                id="amountSpent"
-                name="amountSpent"
-                [class.govuk-input--error]="this.submitted && this.form.get('amountSpent').invalid"
-                type="text"
-              />
+              <div class="govuk-input__wrapper">
+                <div class="govuk-input__prefix">£</div>
+                <input
+                  class="govuk-input govuk-input--width-5"
+                  [formControlName]="'amountSpent'"
+                  id="amountSpent"
+                  name="amountSpent"
+                  [class.govuk-input--error]="this.submitted && this.form.get('amountSpent').invalid"
+                  type="text"
+                />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gouvk-grid-row govuk-!-margin-bottom-3">
-        <div class="govuk-form-group">
-          <div class="govuk-radios">
-            <div class="govuk-radios__item" *ngFor="let option of amountSpentKnownOptions; let i = index">
-              <input
-                class="govuk-radios__input"
-                type="radio"
-                id="amountSpentKnown-{{ i }}"
-                name="amountSpentKnown"
-                [formControlName]="'amountSpentKnown'"
-                [value]="option.value"
-              />
-              <label for="amountSpentKnown-{{ i }}" class="govuk-label govuk-radios__label">{{ option.label }}</label>
+        <div class="gouvk-grid-row govuk-!-margin-bottom-3">
+          <div class="govuk-form-group">
+            <div class="govuk-radios">
+              <div class="govuk-radios__item" *ngFor="let option of amountSpentKnownOptions; let i = index">
+                <input
+                  class="govuk-radios__input"
+                  type="radio"
+                  id="amountSpentKnown-{{ i }}"
+                  name="amountSpentKnown"
+                  [formControlName]="'amountSpentKnown'"
+                  [value]="option.value"
+                />
+                <label for="amountSpentKnown-{{ i }}" class="govuk-label govuk-radios__label">{{ option.label }}</label>
+              </div>
             </div>
           </div>
         </div>
+      </fieldset>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <div *ngIf="!return" class="govuk-util__float-right">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="sections"
+          [currentSection]="section"
+        ></app-progress-bar>
       </div>
     </div>
-  </fieldset>
+  </div>
   <app-workplace-submit-button
     [return]="!!return"
     [recordSummary]="!this.inStaffRecruitmentFlow"
