altered the width of input

--- a/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
+++ b/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
@@ -43,7 +43,7 @@
               <div class="govuk-input__wrapper">
                 <div class="govuk-input__prefix">£</div>
                 <input
-                  class="govuk-input govuk-input--width-5"
+                  class="govuk-input govuk-!-width-one-third"
                   [formControlName]="'amountSpent'"
                   id="amountSpent"
                   name="amountSpent"
